<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:padding="5px" 
    android:text="@string/url_string"
    />
<EditText
android:id="@+id/url"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/default_url"
/>
<Button
android:id="@+id/button"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/request"
/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:padding="5px" 
    android:text="@string/post_title"
    />
<EditText
android:id="@+id/input"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/input"
/>
<Button
android:id="@+id/postBtn"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/post_btn"
/>
<ScrollView
android:layout_width="fill_parent"
android:layout_height="wrap_content">
    <TextView
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5px"
    />
</ScrollView>
</LinearLayout>